deploymeinlabonly.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: labtoken
  name: labtoken
  namespace: kasten-io
spec:
  replicas: 1
  selector:
    matchLabels:
      app: labtoken
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: labtoken
    spec:
      containers:
      - image: tdewin/labtoken:latest
        imagePullPolicy: Always
        name: labtoken
      serviceAccount: k10-k10
      serviceAccountName: k10-k10
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: labtoken
  name: labtoken
  namespace: kasten-io
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: labtoken
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: labtoken
  name: labtoken
  namespace: kasten-io
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: labtoken
            port:
              name: http
        path: /labtoken
        pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: labtoken
  name: allow-labtoken
  namespace: kasten-io
spec:
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: labtoken
  policyTypes:
  - Ingress
